# hooked

./: .gitignore  Cargo.toml  Hooked.toml  Makefile.toml  README.md  shell.nix
hooked-book/: book.toml
hooked-book/source/: README.md  SUMMARY.md  cli-reference.txt
hooked-book/source/changelog/: README.md
hooked-book/source/cli/: README.md  install.md  run.md  uninstall.md
hooked-book/source/configuration/: README.md
hooked-book/source/getting-started/: README.md  creating-hooks.md  installation.md  installing-hooks.md
hooked-cli/: Cargo.toml
hooked-cli/source/: main.rs  printer.rs  utilities.rs
hooked-cli/source/cli/: cli_reference.rs  install.rs  mod.rs  run.rs  uninstall.rs
hooked-cli/source/templates/: cli-reference.txt  default.sh
hooked-cli/source/utilities/: mod.rs
hooked-cli/tests/: run.rs
hooked-cli/tests/samples/: pre-commit.toml  simple-echo.bash
hooked-cli/tests/snapshots/: run__pre-commit.snap
hooked-config/: Cargo.toml
hooked-config/source/config/: exit_action.rs  general.rs  mod.rs  noise_level.rs  pre_commit.rs  task.rs
hooked-config/tests/: parsing.rs  serialize.rs
hooked-config/tests/parsing/: with-hooks.toml
hooked-config/tests/snapshots/: parsing__defaults.snap  parsing__with-hooks.snap  serialize__serialize.snap
hooked-library/: Cargo.toml
hooked-library/source/config/: exit_action.rs
hooked-library/tests/: parsing.rs  serialize.rs
source/: lib.rs
source/config/: exit_action.rs  general.rs  mod.rs  pre_commit.rs
tests/: parsing.rs  serialize.rs
tests/parsing/: defaults.toml  with-hooks.toml
tests/snapshots/: parsing__defaults.snap  parsing__with-hooks.snap  serialize__serialize.snap
