[package]
name = "hooked"
description = "Git hooks manager."
repository = "https://git.bauke.xyz/Holllo/hooked"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"

[lib]
name = "hooked"
path = "source/lib.rs"

[dependencies]
color-eyre = "0.6.2"
toml = "0.5.9"

[dependencies.serde]
features = ["derive"]
version = "1.0.147"

[dev-dependencies]
insta = "1.21.0"
test-case = "2.2.2"
