[package]
name = "hooked-cli"
description = "Git hooks manager."
documentation = "https://hooked.holllo.org"
homepage = "https://hooked.holllo.org"
repository = "https://git.bauke.xyz/Holllo/hooked"
readme = "../README.md"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"

[[bin]]
name = "hooked"
path = "source/main.rs"

[lints]
workspace = true

[dependencies]
color-eyre = "0.6.2"
globset = "0.4.9"
lazy_static = "1.4.0"
owo-colors = "3.5.0"
subprocess = "0.2.9"
supports-color = "1.3.0"
tera = "1.17.1"

[dependencies.clap]
features = ["derive"]
version = "4.0.18"

[dependencies.hooked-config]
path = "../hooked-config"
version = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0.5"
insta = "1.21.0"
test-case = "2.2.2"
