[package]
name = "hooked-config"
description = "Configuration for Hooked."
documentation = "https://docs.rs/hooked-config"
homepage = "https://hooked.holllo.org"
repository = "https://git.bauke.xyz/Holllo/hooked"
readme = "../README.md"
license = "AGPL-3.0-or-later"
license-file = "../LICENSE"
version = "0.1.0"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"

[lib]
path = "source/lib.rs"

[dependencies]
color-eyre = "0.6.2"
toml = "0.5.9"

[dependencies.serde]
features = ["derive"]
version = "1.0.147"

[dev-dependencies]
insta = "1.21.0"
test-case = "2.2.2"
