[package]
name = "hooked-config"
description = "Configuration for Hooked."
documentation = "https://docs.rs/hooked-config"
homepage = "https://hooked.holllo.org"
repository = "https://git.bauke.xyz/Holllo/hooked"
readme = "../README.md"
license = "AGPL-3.0-or-later"
version = "0.1.0"
authors = ["Holllo <helllo@holllo.org>"]
edition = "2021"

[lib]
path = "source/lib.rs"

[lints]
workspace = true

[dependencies]
color-eyre = "0.6.2"
toml = "0.8.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.195"

[dev-dependencies]
insta = "1.34.0"
test-case = "3.3.1"
